<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wwater"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SecurityActivity">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:id="@+id/waterLevel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="20dp"
                        android:focusable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="20dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:background="@drawable/cirlcebackgroundblue"
                                android:padding="5dp"
                                android:src="@drawable/securitystatus"
                                android:contentDescription="@string/todo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/security"
                                android:textStyle="bold"
                                android:textSize="25sp"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="10dp"
                                android:background="@color/lightgray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text=""
                                android:textColor="@android:color/darker_gray" />
                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:gravity="center"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:id="@+id/buttonAboutUs"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="15dp"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardCornerRadius="20dp"
                            android:focusable="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="20dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="70dp"
                                    android:layout_height="70dp"
                                    android:padding="5dp"
                                    android:src="@drawable/aboutus"
                                    android:contentDescription="TODO" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/aboutus"
                                    android:textStyle="bold"
                                    android:textSize="25sp"/>

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_margin="10dp"
                                    android:background="@color/lightgray" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:text="Water Monitoring System Staff"
                                    android:textColor="@android:color/darker_gray" />
                            </LinearLayout>

                        </android.support.v7.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:gravity="center"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:id="@+id/buttonLogout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="15dp"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardCornerRadius="20dp"
                            android:focusable="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="20dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="70dp"
                                    android:layout_height="70dp"
                                    android:background="@drawable/cirlcebackgroundyellow"
                                    android:padding="5dp"
                                    android:src="@drawable/logout"
                                    android:contentDescription="TODO" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/Logout"
                                    android:textStyle="bold"
                                    android:textSize="25sp"/>

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_margin="10dp"
                                    android:background="@color/lightgray" />

                                <TextView
                                    android:id="@+id/textViewUserEmail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:text=""
                                    android:textColor="@android:color/darker_gray" />
                            </LinearLayout>

                        </android.support.v7.widget.CardView>
</LinearLayout>


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
    </ScrollView>